--- a/MyMovies.Web/Views/Shared/_Footer.cshtml
+++ b/MyMovies.Web/Views/Shared/_Footer.cshtml
@@ -5,7 +5,7 @@
                 <div class="col-md-3 col-sm-6 main-widget">
                     <div class="widget">
                         <div class="corporate-widget">
-                            <span class="footer-logo">BOSS</span><!-- End .footer-logo -->
+                            <span class="footer-logo">MOVIES</span>
                             <p>We are a creative company, who works with passion and love. We provide the best services you need. We help you to get better...</p>
 
                             <address>
