--- a/MyMovies.Web/Views/Shared/_Header.cshtml
+++ b/MyMovies.Web/Views/Shared/_Header.cshtml
@@ -74,7 +74,9 @@
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Categories<span class="angle"></span></a>
                             @{Html.RenderAction("Menu", "Movie");}
                         </li>
-
+                        <li class="dropdown megamenu-container">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Admin<span class="angle"></span></a>
+                        </li>
                     </ul>
 
                     <button type="button" class="navbar-btn btn-icon btn-circle navbar-right last  hidden-sm hidden-xs collapsed" data-toggle="collapse" data-target="#header-search-form" aria-expanded="false"><i class="fa fa-search"></i></button>
