--- a/MyMovies.Web/Views/Movie/Index.cshtml
+++ b/MyMovies.Web/Views/Movie/Index.cshtml
@@ -10,7 +10,7 @@
         </div>
     </div>
 
-    <div class="container">
+    <div class="container" ng-controller="MovieListController">
         <div class="row">
             @for (var i = 0; i < Model.Movies.Count(); i++)
             {
