--- a/MyMovies.Web/Views/Movie/_Movie.cshtml
+++ b/MyMovies.Web/Views/Movie/_Movie.cshtml
@@ -10,6 +10,7 @@
                 </a>
             </figure>
             <div class="portfolio-meta">
+                <a href="/Admin/Search?key=@Model.ImdbId">Edit</a>
                 <h1 class="movie-poster">
                     <a href="javascript:void(0)" title="Favourite" ng-click="addToWatchList(@Model.MovieId)">
                         <i class="fa fa-heart-o"></i>
