Global Search and refactor code in movie controller

--- a/MyMovies.Web/Views/Account/Login.cshtml
+++ b/MyMovies.Web/Views/Account/Login.cshtml
@@ -10,8 +10,7 @@
                 </div>
                 <div class="col-md-6">
                     <ol class="breadcrumb">
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="#">Shop</a></li>
+                        <li><a href="/">Home</a></li>
                         <li class="active">Login</li>
                     </ol>
                 </div>
@@ -56,13 +55,13 @@
 
                 <p>if you don't have an account, please go to register page and create one to be able to save your movie you want to watch later.</p>
 
-                <div class="mb10"></div><!-- space -->
+                <div class="mb10"></div>
 
                 <a href="/Account/Register" class="btn btn-dark">Create Account</a>
-            </div><!-- End .col-sm-6 -->
-        </div><!-- End .row -->
-    </div><!-- End .container -->
+            </div>
+        </div>
+    </div>
 
-    <div class="mb20"></div><!-- space -->
+    <div class="mb20"></div>
 
 </div>
