--- a/MyMovies.Web/Views/Shared/_Header.cshtml
+++ b/MyMovies.Web/Views/Shared/_Header.cshtml
@@ -3,7 +3,7 @@
         <div class="container">
             @using (Html.BeginForm("Index", "Movie", FormMethod.Get, new {@class="navbar-form animated fadeInDown"}))
             {
-                <input type="search" name="Search" class="form-control" placeholder="Search in here..." value="@ViewBag.Search">
+                <input type="search" id="Search" name="Search" class="form-control" placeholder="Search in here..." value="@ViewBag.Search">
                 <button type="submit" class="btn-circle" title="Search"><i class="fa fa-search"></i></button>
             }
         </div>
@@ -77,7 +77,7 @@
                         }
                     </ul>
 
-                    <button type="button" class="navbar-btn btn-icon btn-circle navbar-right last  hidden-sm hidden-xs collapsed" data-toggle="collapse" data-target="#header-search-form" aria-expanded="false"><i class="fa fa-search"></i></button>
+                    <button type="button" onclick="focusSearch()" class="navbar-btn btn-icon btn-circle navbar-right last  hidden-sm hidden-xs collapsed" data-toggle="collapse" data-target="#header-search-form" aria-expanded="false"><i class="fa fa-search"></i></button>
 
                     <div class="dropdown cart-dropdown navbar-right hidden-sm hidden-xs">
                         <button type="button" class="navbar-btn btn-icon btn-circle dropdown-toggle" data-toggle="dropdown"><i class="fa fa-play-circle"></i></button>
@@ -129,3 +129,11 @@
         </div><!-- End .navbar-inner -->
     </nav>
 </header><!-- End #header -->
+
+<script>
+    function focusSearch() {
+        setTimeout(function () {
+            document.getElementById('Search').focus();
+        }, 1);
+    }
+</script>
