--- a/MyMovies.Web/Views/Admin/AddEditBanner.cshtml
+++ b/MyMovies.Web/Views/Admin/AddEditBanner.cshtml
@@ -1,5 +1,4 @@
 ﻿@model MyMovies.Web.ViewModels.BannerAddEditViewModel
-@*download this https://itsjavi.com/bootstrap-colorpicker/*@
 @{
     var headerBg = "'/Images/Banners/Default.jpg'";
 }
@@ -15,34 +14,54 @@
         </div>
     </div>
     <div class="container">
-
-        <div class="row">
-            <div class="well col-md-12">
-                <div class="col-md-4">
-                    <div class="form-group">
-                        <label for="ColorPicker">Text Color</label>
-                        <input id="ColorPicker" type="text" class="form-control" value="white"/>
+        @using (Html.BeginForm("AddEditBanner", "Admin", FormMethod.Post, new { enctype = "multipart/form-data" }))
+        {
+            <div class="row">
+                <div class="well col-md-12">
+                    <div class="col-md-4">
+                        <div class="form-group">
+                            <label for="ColorPicker">Text Color</label>
+                            <input id="ColorPicker" type="text" class="form-control no-radius" value="white" />
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="form-group">
+                            @Html.LabelFor(model => model.Type, "Banner Type")
+                            @Html.DropDownListFor(model => model.Type, Model.BannerTypes, new { @class = "form-control" })
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="form-group">
+                            @Html.LabelFor(model => model.Identifier)
+                            @Html.TextBoxFor(model => model.Identifier, new { @class = "form-control no-radius", placeholder = "Identifier for Banner type" })
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="row">
-            <div class="col-md-12">
-                <input type="file" id="file" value="Upload" accept="image/*" name="MoviePoster" custom-on-change="fileChange" capture="ChangeBackground" style="display: none" />
-                <span class="change-background" ng-click="changeBackGround()">Change Background
-                    <i class="fa fa-pencil-square-o" aria-hidden="true"></i>
-                </span>
-            </div>
-            <div class="page-header" style="background: url(@headerBg) no-repeat; background-size: 100%; height: 140px; display: block" id="BackGround">
+            <div class="row">
                 <div class="col-md-12">
+                    <input type="file" id="file" value="Upload" accept="image/*" name="MoviePoster" custom-on-change="fileChange" capture="ChangeBackground" style="display: none" />
+                    <span class="change-background" ng-click="changeBackGround()">Change Background
+                    <i class="fa fa-pencil-square-o" aria-hidden="true"></i>
+                    </span>
+                </div>
+                <div class="page-header" style="background: url(@headerBg) no-repeat; background-size: 100%; height: 140px; display: block" id="BackGround">
+                    <div class="col-md-12">
 
-                    <h2 ng-show="!showTextBox">
-                        <div ng-bind="bannerText" ng-click="displayTextBox()" id="BannerDivText" style="color:white"></div>
-                    </h2>
-                    <input type="text" class="form-control no-radius" ng-model="bannerText" ng-show="showTextBox" ng-blur="showTextBox=!showTextBox" id="BannerText" />
+                        <h2 ng-show="!showTextBox">
+                            <div ng-bind="bannerText" ng-click="displayTextBox()" id="BannerDivText" style="color: white"></div>
+                        </h2>
+                        <input type="text" class="form-control no-radius" ng-model="bannerText" ng-show="showTextBox" ng-blur="showTextBox=!showTextBox" id="BannerText" />
+                    </div>
                 </div>
             </div>
-        </div>
+            <div class="row">
+                <div class="col-md-12">
+                    <input type="submit" value="Submit" class="btn btn-primary pull-right"/>
+                </div>
+            </div>
+        }
+
     </div>
 </div>
 
