--- a/MyMovies.Web/Views/Admin/Banner.cshtml
+++ b/MyMovies.Web/Views/Admin/Banner.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Banners";
 }
 
-<div id="content" role="main">
+<div id="content" role="main" ng-controller="AdminController">
     <div class="page-header dark larger larger-desc">
         <div class="container">
             <div class="row">
@@ -31,6 +31,7 @@
             <table class="table table-bordered table-hover table-condensed">
                 <thead>
                     <tr>
+                        <th>Identifier</th>
                         <th>Text Color</th>
                         <th>Type</th>
                         <th>Poster</th>
@@ -38,16 +39,17 @@
                     </tr>
                 </thead>
                 <tbody>
-                    @foreach (var item in Model)
+                    @foreach (var item in Model.OrderBy(x => x.Type))
                     {
                         <tr>
+                            <td>@item.Identifier</td>
                             <td>@item.TextColor</td>
                             <td>@item.Type.ToString()</td>
                             <td>@item.Poster</td>
                             <td>
                                 @Html.ActionLink("edit", "EditBanner", new { id = item.BannerId }) |
-                            @Html.ActionLink("delete", "DeleteBanner", new { id = item.BannerId }) |
-                            @Html.ActionLink("preview", "PreviewBanner", new { id = item.BannerId })
+                                @Html.ActionLink("delete", "DeleteBanner", new { id = item.BannerId }, new { onclick="return confirm('Are you sure you want to delete this banner?');" }) |
+                                @Html.ActionLink("preview", "PreviewBanner", new { id = item.BannerId })
                             </td>
                         </tr>
                     }
